smart-home/home-assistant-extras/homematic-callback.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homematic-callback
  namespace: smart-home
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 34711
      targetPort: 34711
  selector:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
