smart-home/home-assistant-extras/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - "home-assistant.homelab.cloudbending.dev"
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homematic-callback
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
      sectionName: homematic-callback
  hostnames:
    - "home-assistant-callback.homelab.cloudbending.dev"
  rules:
    - backendRefs:
        - name: home-assistant
          port: 34711
